--- a/lineage/res/res/values-sv/strings.xml
+++ b/lineage/res/res/values-sv/strings.xml
@@ -16,7 +16,7 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="lineageos_system_label">LineageOS-systemet</string>
+    <string name="lineageos_system_label">ArbitrarilyTong-systemet</string>
     <string name="permlab_modifyProfiles">ändra systemprofiler</string>
     <string name="permdesc_modifyProfiles">Tillåter att en app ändrar systemprofiler.</string>
     <string name="permlab_useHardwareFramework">använda hårdvaruramverk</string>
@@ -63,10 +63,8 @@
     <string name="permlab_manageRemotePrefs">hantera fjärrinställningar</string>
     <string name="permdesc_manageRemotePrefs">Tillåter en app att hantera fjärrinställningar</string>
     <string name="build_date">Kompileringsdatum</string>
-    <string name="lineage_api_level">API-nivå för LineageOS</string>
-    <string name="lineage_updates">LineageOS-uppdateringar</string>
-    <string name="lineage_version">LineageOS-version</string>
-    <string name="lineage_vendor_security_patch">Säkerhetsprogramvaruversion</string>
+    <string name="lineage_updates">ArbitrarilyTong-uppdateringar</string>
+    <string name="lineage_version">ArbitrarilyTong-version</string>
     <string name="unknown">Okänt</string>
     <string name="app_killed_message">Applikationen har tvångsavslutats</string>
     <string name="kilobitspersecond_short">kb/s</string>
